--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
-    "typescript": "^5.4.2",
-    "@types/node": "^20.11.28"
+    "@types/node": "^20.11.28",
+    "typescript": "^5.4.2"
   }
 }
